--- a/processing.ipynb
+++ b/processing.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extraction des Données"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -41,7 +48,7 @@
     }
    ],
    "source": [
-    "# Chemin vers votre fichier Excel\n",
+    "# Chemin vers le fichier Excel\n",
     "file_path = 'Online Retail.xlsx'\n",
     "# Chargement du fichier Excel dans un DataFrame\n",
     "with io.open(file_path, 'r', encoding='utf-8') as f:\n",
@@ -52,10 +59,48 @@
     "    except Exception as e:\n",
     "        print(f\"Erreur lors de la lecture du fichier Excel : {e}\")\n",
     "\n",
-    "\n",
     "# Affichage des premières lignes du DataFrame\n",
-    "\n",
     "#print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nettoyage des données\n",
+    "soustraction des valeurs négatives de la colonne Quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\steph\\AppData\\Local\\Temp\\ipykernel_23672\\3214598388.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  positive_quantities['InvoiceDate'] = pd.to_datetime(\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_quantities = df[df['Quantity'] >= 0]\n",
+    "positive_quantities['InvoiceDate'] = pd.to_datetime(\n",
+    "    positive_quantities['InvoiceDate'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformation des données\n",
+    "Création d'un nouveau dataframe issus de regroupement par client avec la récence, la somme des dépenses par client et la fréquence d'achat par client en fonction de la date de référence."
    ]
   },
   {
@@ -67,29 +112,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    InvoiceNo StockCode                       Description  Quantity  \\\n",
-      "141   C536379         D                          Discount        -1   \n",
-      "154   C536383    35004C   SET OF 3 COLOURED  FLYING DUCKS        -1   \n",
-      "235   C536391     22556    PLASTERS IN TIN CIRCUS PARADE        -12   \n",
-      "236   C536391     21984  PACK OF 12 PINK PAISLEY TISSUES        -24   \n",
-      "237   C536391     21983  PACK OF 12 BLUE PAISLEY TISSUES        -24   \n",
-      "\n",
-      "            InvoiceDate  UnitPrice  CustomerID         Country  \n",
-      "141 2010-12-01 09:41:00      27.50     14527.0  United Kingdom  \n",
-      "154 2010-12-01 09:49:00       4.65     15311.0  United Kingdom  \n",
-      "235 2010-12-01 10:24:00       1.65     17548.0  United Kingdom  \n",
-      "236 2010-12-01 10:24:00       0.29     17548.0  United Kingdom  \n",
-      "237 2010-12-01 10:24:00       0.29     17548.0  United Kingdom  \n",
-      "La colonne 'motif' n'existe pas dans le fichier.\n"
+      "   CustomerID  Recency  Frequency  Monetary\n",
+      "0     12346.0      -49          1      1.04\n",
+      "1     12347.0     -372        182    481.21\n",
+      "2     12348.0     -299         31    178.71\n",
+      "3     12349.0     -356         73    605.10\n",
+      "4     12350.0      -64         17     65.30\n"
      ]
     }
    ],
    "source": [
-    "# Filtrage des lignes avec des quantités négatives\n",
-    "negative_quantities = df[df['Quantity'] < 0]\n",
+    "# Calcul de la récence, fréquence et montant\n",
+    "reference_date = pd.to_datetime('2010-12-01')\n",
+    "rfm = positive_quantities.groupby('CustomerID').agg({\n",
+    "    'InvoiceDate': lambda x: (reference_date - x.max()).days,\n",
+    "    'CustomerID': 'count',\n",
+    "    'UnitPrice': 'sum',\n",
+    "}).rename(columns={\n",
+    "    'InvoiceDate': 'Recency',\n",
+    "    'CustomerID': 'Frequency',\n",
+    "    'UnitPrice': 'Monetary'\n",
+    "}).reset_index()\n",
     "\n",
-    "# Affichage des premières lignes avec des quantités négatives\n",
-    "print(negative_quantities.head())"
+    "print(rfm.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load data\n",
+    "Utilisation du machine learning pour segmenter les clients (k-mean)"
    ]
   },
   {
@@ -141,40 +194,40 @@
     }
    ],
    "source": [
-    "positive_quantities = df[df['Quantity'] >= 0]\n",
-    "positive_quantities['InvoiceDate'] = pd.to_datetime(\n",
-    "    positive_quantities['InvoiceDate'])\n",
-    "# Calcul de la récence, fréquence et montant\n",
-    "reference_date = pd.to_datetime('2010-12-01')\n",
-    "rfm = positive_quantities.groupby('CustomerID').agg({\n",
-    "    'InvoiceDate': lambda x: (reference_date - x.max()).days,\n",
-    "    'CustomerID': 'count',\n",
-    "    'UnitPrice': 'sum',\n",
-    "}).rename(columns={\n",
-    "    'InvoiceDate': 'Recency',\n",
-    "    'CustomerID': 'Frequency',\n",
-    "    'UnitPrice': 'Monetary'\n",
-    "}).reset_index()\n",
-    "\n",
     "# Préparer les données pour le clustering\n",
     "rfm_data = rfm[['Recency', 'Frequency', 'Monetary']]\n",
     "\n",
+    "\n",
     "# Standardiser les données\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "rfm_scaled = scaler.fit_transform(rfm_data)\n",
+    "\n",
     "# Déterminer le nombre optimal de clusters avec la méthode du coude\n",
+    "\n",
     "sse = []\n",
+    "\n",
     "for k in range(1, 11):\n",
+    "\n",
     "    kmeans = KMeans(n_clusters=k, random_state=42)\n",
+    "\n",
     "    kmeans.fit(rfm_scaled)\n",
+    "\n",
     "    sse.append(kmeans.inertia_)\n",
     "\n",
+    "\n",
     "# Visualiser la méthode du coude\n",
+    "\n",
     "plt.figure(figsize=(10, 6))\n",
+    "\n",
     "plt.plot(range(1, 11), sse, marker='o')\n",
+    "\n",
     "plt.xlabel('Number of clusters')\n",
+    "\n",
     "plt.ylabel('SSE')\n",
+    "\n",
     "plt.title('Elbow Method')\n",
+    "\n",
     "plt.show()"
    ]
   },
