chore: Remove unused file and update data export in processing.ipynb

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\steph\\AppData\\Local\\Temp\\ipykernel_1200\\2312504916.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\steph\\AppData\\Local\\Temp\\ipykernel_9436\\2312504916.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -107,22 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CustomerID  Recency  Frequency  Monetary\n",
-      "0     12346.0      -49          1      1.04\n",
-      "1     12347.0     -372        182    481.21\n",
-      "2     12348.0     -299         31    178.71\n",
-      "3     12349.0     -356         73    605.10\n",
-      "4     12350.0      -64         17     65.30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calcul de la récence, fréquence et montant\n",
     "reference_date = pd.to_datetime('2010-12-01')\n",
@@ -135,10 +122,7 @@
     "    'CustomerID': 'Frequency',\n",
     "    'UnitPrice': 'Monetary'\n",
     "}).reset_index()\n",
-    "\n",
-    "print(rfm.head())\n",
-    "# Exporter les données\n",
-    "rfm.to_csv('rfm_online_retail.csv', index=False)"
+    "\n"
    ]
   },
   {
@@ -150,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,13 +214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   CustomerID  Recency  Frequency  Monetary  Cluster     Cluster Name\n",
+      "0     12346.0      -49          1      1.04        1  Clients Fidèles\n",
+      "1     12347.0     -372        182    481.21        0        Champions\n",
+      "2     12348.0     -299         31    178.71        0        Champions\n",
+      "3     12349.0     -356         73    605.10        0        Champions\n",
+      "4     12350.0      -64         17     65.30        1  Clients Fidèles\n",
       "         Cluster Name     Recency    Frequency      Monetary\n",
       "0           Champions -330.631838    74.233868    221.449726\n",
       "1     Clients Fidèles -125.223585    27.607547     96.468463\n",
@@ -264,7 +254,9 @@
     "# Appliquer le mapping des noms aux clusters\n",
     "rfm['Cluster Name'] = rfm['Cluster'].map(cluster_names)\n",
     "\n",
-    "\n",
+    "print(rfm.head())\n",
+    "# Exporter les données\n",
+    "rfm.to_csv('rfm_online_retail.csv', index=False)\n",
     "# Analyser les clusters\n",
     "cluster_aggregates = rfm.groupby('Cluster Name').agg({\n",
     "    'Recency': 'mean',\n",
@@ -301,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
