chore: Update RFM calculation to use correct column names

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -113,16 +113,29 @@
    "source": [
     "# Calcul de la récence, fréquence et montant\n",
     "reference_date = pd.to_datetime('2010-12-01')\n",
+    "# Calculer le montant total par transaction\n",
+    "positive_quantities['TotalPrice'] = positive_quantities['UnitPrice'] * \\\n",
+    "    positive_quantities['Quantity']\n",
+    "\n",
     "rfm = positive_quantities.groupby('CustomerID').agg({\n",
     "    'InvoiceDate': lambda x: (reference_date - x.max()).days,\n",
-    "    'CustomerID': 'count',\n",
-    "    'UnitPrice': 'sum'\n",
+    "    'InvoiceDate': 'nunique',  # Fréquence : nombre de commandes distinctes\n",
+    "    'TotalPrice': 'sum'        # Montant : somme des montants totaux par transaction\n",
     "}).rename(columns={\n",
     "    'InvoiceDate': 'Recency',\n",
-    "    'CustomerID': 'Frequency',\n",
-    "    'UnitPrice': 'Monetary'\n",
+    "    'InvoiceDate': 'Frequency',\n",
+    "    'TotalPrice': 'Monetary'\n",
     "}).reset_index()\n",
-    "\n"
+    "\n",
+    "# rfm = positive_quantities.groupby('CustomerID').agg({\n",
+    "#     'InvoiceDate': lambda x: (reference_date - x.max()).days,\n",
+    "#     'CustomerID': 'count',\n",
+    "#     'UnitPrice': 'sum'\n",
+    "# }).rename(columns={\n",
+    "#     'InvoiceDate': 'Recency',\n",
+    "#     'CustomerID': 'Frequency',\n",
+    "#     'UnitPrice': 'Monetary'\n",
+    "# }).reset_index()"
    ]
   },
   {
