chore: Update cluster distribution calculation and revenue contribution visualization

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -16,6 +16,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_data(df, expected_columns, expected_dtypes):\n",
+    "    assert set(df.columns) == set(\n",
+    "        expected_columns), \"Les colonnes ne correspondent pas aux attentes.\"\n",
+    "    for col, dtype in expected_dtypes.items():\n",
+    "        assert df[col].dtype == dtype, f\"Le type de données pour {col} n'est pas {dtype}.\"\n",
+    "\n",
+    "\n",
+    "# Vérifier les colonnes et les types de données après transformation\n",
+    "expected_columns = ['CustomerID','Recency','Frequency','Monetary']\n",
+    "expected_dtypes = {\n",
+    "    'CustomerID': 'float64',\n",
+    "    'Recency': 'int64',\n",
+    "    'Frequency': 'int64',\n",
+    "    'Monetary': 'float64'\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +66,16 @@
       "1 2010-12-01 08:26:00       3.39     17850.0  United Kingdom  \n",
       "2 2010-12-01 08:26:00       2.75     17850.0  United Kingdom  \n",
       "3 2010-12-01 08:26:00       3.39     17850.0  United Kingdom  \n",
-      "4 2010-12-01 08:26:00       3.39     17850.0  United Kingdom  \n"
+      "4 2010-12-01 08:26:00       3.39     17850.0  United Kingdom  \n",
+      "InvoiceNo              object\n",
+      "StockCode              object\n",
+      "Description            object\n",
+      "Quantity                int64\n",
+      "InvoiceDate    datetime64[ns]\n",
+      "UnitPrice             float64\n",
+      "CustomerID            float64\n",
+      "Country                object\n",
+      "dtype: object\n"
      ]
     }
    ],
@@ -56,9 +88,10 @@
     "        df = pd.read_excel(file_path, engine='openpyxl')\n",
     "        # Affichez les premières lignes pour vérifier si le chargement s'est bien déroulé\n",
     "        print(df.head())\n",
+    "        # Afficher les types de données de chaque colonne\n",
+    "        print(df.dtypes)\n",
     "    except Exception as e:\n",
     "        print(f\"Erreur lors de la lecture du fichier Excel : {e}\")\n",
-    "\n",
     "# Affichage des premières lignes du DataFrame\n",
     "#print(df.head())"
    ]
@@ -73,27 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\steph\\AppData\\Local\\Temp\\ipykernel_16688\\2312504916.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  positive_quantities['InvoiceDate'] = pd.to_datetime(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Extraction des lignes avec des quantités positives\n",
     "positive_quantities = df[df['Quantity'] >= 0]\n",
-    "positive_quantities['InvoiceDate'] = pd.to_datetime(\n",
-    "    positive_quantities['InvoiceDate'])\n",
     "\n",
+    "# Suppression des colonnes inutiles\n",
+    "positive_quantities = positive_quantities.drop(\n",
+    "    columns=['StockCode', 'Description', 'Country'])\n",
+    "\n",
+    "# Exportation des données dans un fichier CSV\n",
     "positive_quantities.to_csv('positive_quantities.csv', index=False)"
    ]
   },
@@ -107,21 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\steph\\AppData\\Local\\Temp\\ipykernel_16688\\210477691.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  positive_quantities['TotalPrice'] = positive_quantities['UnitPrice'] * \\\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -136,40 +148,36 @@
     }
    ],
    "source": [
-    "# Calcul de la récence, fréquence et montant\n",
-    "reference_date = pd.to_datetime('2010-12-01')\n",
+    "# Formatage de la colonne InvoiceDate en datetime\n",
+    "positive_quantities['InvoiceDate'] = pd.to_datetime(\n",
+    "    positive_quantities['InvoiceDate'])\n",
+    "\n",
     "# Calculer le montant total par transaction\n",
     "positive_quantities['TotalPrice'] = positive_quantities['UnitPrice'] * \\\n",
     "    positive_quantities['Quantity']\n",
     "\n",
+    "# Calcul de la récence, fréquence et montant\n",
+    "reference_date = pd.to_datetime('2010-12-01')\n",
     "# Calculer la récence\n",
     "recency = positive_quantities.groupby('CustomerID').agg({\n",
     "    'InvoiceDate': lambda x: (reference_date - x.max()).days\n",
     "}).rename(columns={'InvoiceDate': 'Recency'})\n",
-    "\n",
     "# Calculer la fréquence\n",
     "frequency = positive_quantities.groupby('CustomerID').agg({\n",
     "    'InvoiceDate': 'nunique'\n",
     "}).rename(columns={'InvoiceDate': 'Frequency'})\n",
-    "\n",
     "# Calculer le montant\n",
     "monetary = positive_quantities.groupby('CustomerID').agg({\n",
     "    'TotalPrice': 'sum'\n",
     "}).rename(columns={'TotalPrice': 'Monetary'})\n",
-    "\n",
     "# Combiner les trois métriques en un seul DataFrame\n",
     "rfm = recency.join(frequency).join(monetary).reset_index()\n",
     "\n",
-    "print(rfm.head())\n",
-    "# rfm = positive_quantities.groupby('CustomerID').agg({\n",
-    "#     'InvoiceDate': lambda x: (reference_date - x.max()).days,\n",
-    "#     'CustomerID': 'count',\n",
-    "#     'UnitPrice': 'sum'\n",
-    "# }).rename(columns={\n",
-    "#     'InvoiceDate': 'Recency',\n",
-    "#     'CustomerID': 'Frequency',\n",
-    "#     'UnitPrice': 'Monetary'\n",
-    "# }).reset_index()"
+    "# Verification des données\n",
+    "check_data(rfm, expected_columns, expected_dtypes)\n",
+    "\n",
+    "# Affichage des premières lignes du DataFrame\n",
+    "print(rfm.head())"
    ]
   },
   {
@@ -181,14 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in thread Thread-7 (_readerthread):\n",
+      "Exception in thread Thread-34 (_readerthread):\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\threading.py\", line 1045, in _bootstrap_inner\n",
       "    self.run()\n",
@@ -261,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -314,33 +322,12 @@
     "print(cluster_aggregates)\n",
     "\n",
     "# Exporter les résultats de l'analyse des clusters\n",
-    "cluster_aggregates.to_csv('cluster_aggregates_online_retail.csv', index=False)\n",
-    "\n",
-    "\n",
-    "# # Visualiser les clusters\n",
-    "# plt.figure(figsize=(10, 6))\n",
-    "\n",
-    "# # Définir les couleurs pour les clusters\n",
-    "# colors = ['blue', 'green', 'red', 'purple']\n",
-    "\n",
-    "# # Tracer chaque cluster\n",
-    "# for cluster_num, color in zip(cluster_names.keys(), colors):\n",
-    "#     cluster_data = rfm[rfm['Cluster'] == cluster_num]\n",
-    "#     plt.scatter(cluster_data['Recency'], cluster_data['Monetary'],\n",
-    "#                 color=color, s=100, label=cluster_names[cluster_num])\n",
-    "\n",
-    "# # Ajouter des labels et une légende\n",
-    "# plt.title('RFM Clustering')\n",
-    "# plt.xlabel('Recency')\n",
-    "# plt.ylabel('Monetary')\n",
-    "# plt.legend()\n",
-    "# plt.grid(True)\n",
-    "# plt.show()"
+    "cluster_aggregates.to_csv('cluster_aggregates_online_retail.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
