refactor: Update cluster aggregation and naming in online retail dataset

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -232,39 +232,38 @@
    "source": [
     "# Préparer les données pour le clustering\n",
     "rfm_data = rfm[['Recency', 'Frequency', 'Monetary']]\n",
-    "\n",
-    "\n",
     "# Standardiser les données\n",
-    "\n",
     "scaler = StandardScaler()\n",
     "rfm_scaled = scaler.fit_transform(rfm_data)\n",
+    "# Appliquer K-means avec le nombre optimal de clusters\n",
+    "optimal_clusters = 5\n",
+    "# Initialiser K-means\n",
+    "kmeans = KMeans(n_clusters=optimal_clusters, random_state=42)\n",
+    "# Prédire les clusters\n",
+    "rfm['Cluster'] = kmeans.fit_predict(rfm_scaled)\n",
+    "# Mapper les numéros de clusters aux noms significatifs\n",
+    "cluster_names = {\n",
+    "    0: 'Champions',\n",
+    "    1: 'Clients Fidèles',\n",
+    "    2: 'Grands Dépenseurs',\n",
+    "    3: 'Clients potentiellement fidèles'\n",
+    "}\n",
+    "# Appliquer le mapping des noms aux clusters\n",
+    "rfm['Cluster Name'] = rfm['Cluster'].map(cluster_names)\n",
+    "print(rfm.head())\n",
+    "# Exporter les données avec les clusters\n",
+    "rfm.to_csv('rfm_online_retail.csv', index=False)\n",
     "\n",
-    "# Déterminer le nombre optimal de clusters avec la méthode du coude\n",
-    "\n",
-    "sse = []\n",
-    "\n",
-    "for k in range(1, 11):\n",
-    "\n",
-    "    kmeans = KMeans(n_clusters=k, random_state=42)\n",
-    "\n",
-    "    kmeans.fit(rfm_scaled)\n",
-    "\n",
-    "    sse.append(kmeans.inertia_)\n",
-    "\n",
-    "\n",
-    "# Visualiser la méthode du coude\n",
-    "\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "\n",
-    "plt.plot(range(1, 11), sse, marker='o')\n",
-    "\n",
-    "plt.xlabel('Number of clusters')\n",
-    "\n",
-    "plt.ylabel('SSE')\n",
-    "\n",
-    "plt.title('Elbow Method')\n",
-    "\n",
-    "plt.show()"
+    "# Afficher les statistiques des clusters\n",
+    "cluster_aggregates = rfm.groupby('Cluster Name').agg({\n",
+    "    'Recency': 'mean',\n",
+    "    'Frequency': 'mean',\n",
+    "    'Monetary': 'mean',\n",
+    "}).reset_index()\n",
+    "# Afficher les résultats de l'analyse des clusters\n",
+    "print(cluster_aggregates)\n",
+    "# Exporter les résultats de l'analyse des clusters\n",
+    "cluster_aggregates.to_csv('cluster_aggregates_online_retail.csv', index=False)"
    ]
   },
   {
@@ -290,40 +289,7 @@
      ]
     }
    ],
-   "source": [
-    "# Appliquer K-means avec le nombre optimal de clusters \n",
-    "optimal_clusters = 4\n",
-    "# Initialiser K-means\n",
-    "kmeans = KMeans(n_clusters=optimal_clusters, random_state=42)\n",
-    "# Prédire les clusters\n",
-    "rfm['Cluster'] = kmeans.fit_predict(rfm_scaled)\n",
-    "\n",
-    "# Mapper les numéros de clusters aux noms significatifs\n",
-    "cluster_names = {\n",
-    "    0: 'Champions',\n",
-    "    1: 'Clients Fidèles',\n",
-    "    2: 'Grands Dépenseurs',\n",
-    "    3: 'Clients Potentiels'\n",
-    "}\n",
-    "\n",
-    "# Appliquer le mapping des noms aux clusters\n",
-    "rfm['Cluster Name'] = rfm['Cluster'].map(cluster_names)\n",
-    "\n",
-    "print(rfm.head())\n",
-    "# Exporter les données\n",
-    "rfm.to_csv('rfm_online_retail.csv', index=False)\n",
-    "# Analyser les clusters\n",
-    "cluster_aggregates = rfm.groupby('Cluster Name').agg({\n",
-    "    'Recency': 'mean',\n",
-    "    'Frequency': 'mean',\n",
-    "    'Monetary': 'mean',\n",
-    "}).reset_index()\n",
-    "# Afficher les résultats de l'analyse des clusters\n",
-    "print(cluster_aggregates)\n",
-    "\n",
-    "# Exporter les résultats de l'analyse des clusters\n",
-    "cluster_aggregates.to_csv('cluster_aggregates_online_retail.csv', index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
